Iniciando CronJob para funcionalidades de alteracao
